--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ h1{
     font-size: 55px;
 }
 
+.info{
+    text-align: center;
+    margin-bottom: 25px;
+    color: rgba(0, 0, 0, 0.233);
+  }
+
 .top-container{
     display: flex;
     justify-content: center;
